json utils, http connection